shopping/shopping_cart_style.css
/* prevents the horizontal scroll that occurs when you open cart */
body { overflow-x: hidden; }

/* for some reason bootstrap automatically sets the height to 70% of viewport */
.container-fluid { height: 100vh; }

#cart-amount {
 position: relative;
 top: 15px;
 left: 35px;
 background-color: red;
 border-radius: 50%;
 padding: 3px 10px;
}

.delbutton {
 border: 0px;
 position: relative;
 background-color: red;
 border-radius: 50%;
 padding: 2px 10px;
}

#shoppingCartBtn { cursor: pointer; }

.card img {
 display: block;
 width: 150px; height: 100px;
} 

.card {
 display: flex;
 text-align: center;
 flex-direction: column;
 justify-content: center;
 align-items: center;
 -webkit-box-shadow:
 0 1px 4px rgba(0, 0, 0, 0.3),
 0 0 40px rgba(0, 0, 0, 0.1) inset;
 -moz-box-shadow:
 0 1px 4px rgba(0, 0, 0, 0.3),
 0 0 40px rgba(0, 0, 0, 0.1) inset;
 box-shadow:
 0 1px 4px rgba(0, 0, 0, 0.3),
 0 0 40px rgba(0, 0, 0, 0.1) inset;
}

.card:before, .card:after {
 content:"";
 position:absolute;
 z-index:-1;
 -webkit-box-shadow:
 0 0 20px rgba(0,0,0,0.8);
 -moz-box-shadow:
 0 0 20px rgba(0,0,0,0.8);
 box-shadow:
 0 0 20px rgba(0,0,0,0.8);
 top: 0;
 bottom: 0;
 left: 10px;
 right: 10px;
 -moz-border-radius:100px / 10px;
 border-radius:100px / 10px;
}

.card:after {
 right:10px;
 left:auto;
 -webkit-transform:skew(8deg) rotate(3deg);
 -moz-transform:skew(8deg) rotate(3deg);
 -ms-transform:skew(8deg) rotate(3deg);
 -o-transform:skew(8deg) rotate(3deg);
 transform:skew(8deg) rotate(3deg);
}

#bill {
 background-color: #453E3B;
 margin: 0;
 display: none;
 -webkit-animation-name: slideInRight;
 animation-name: slideInRight;
 -webkit-animation-duration: 1s;
 animation-duration: 1s;
 -webkit-animation-fill-mode: both;
 animation-fill-mode: both;
}

/* how your animation will be outputted */
@-webkit-keyframes slideInRight {
 0% {
 -webkit-transform: translateX(100%);
 transform: translateX(100%);
 visibility: visible;
 }
 100% {
 -webkit-transform: translateX(0);
 transform: translateX(0);
 }
 }
 @keyframes slideInRight {
 0% {
 -webkit-transform: translateX(100%);
 transform: translateX(100%);
 visibility: visible;
 }
 100% {
 -webkit-transform: translateX(0);
 transform: translateX(0);
 }
} 

#cost {
 height: 100%;
 display: flex;
 justify-content: center;
 align-items: center;
 background-color: #E8BC0E;
 text-align: center;
 text-decoration: none;
 color: #1c1F25;
}

button[class="col-6"] {
 height: 100%;
 display: flex;
 justify-content: center;
 align-items: center;
 background-color: #1c1F25;
 color: white;
 border-color: transparent;
}

#cart-items {
 height: 90%;
 overflow: auto;
 overflow-x: hidden;
}

#costAndClose {
 height: 10%;
}

@media only screen and (max-width: 500px) {
 .shopfor-mob {
  width: 100%;
 }
 .shopfor-mob .col-1 {
  margin-right: 20px;
 }
 * .py-3 {
  display: flex;
  flex-wrap: wrap;
  gap: 30px;
  /* display: none; */
 }
 .py-3 * {
  width: 100%;
 }
 .py-3 button {
  padding: 10px;
 }
 .py-3 img {
  height: auto;
  width: 100%;
 }
 h1 { font-size: 40px; }
 #bill {
  display: block;
  margin: auto;
  width: 100%;
  position: absolute;
 }
 #costAndClose {
  position: absolute;
  width: 100%;
 }
 
}

